fix: ui changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link  rel="icon" type="image/svg+xml" href="/logo-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rain OS</title>
+    <title>rain OS</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
